# shardline

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MAINTAINABILITY_HOTSPOTS.md  Makefile.toml  README.md  TODO_DUPLICATE_CODE_REUSE.md  deny.toml  docker-compose.yml
.cargo/: audit.toml  config.toml
.github/: pull_request_template.md
crates/cache/: Cargo.toml
crates/cache/src/: disabled.rs  error.rs  key.rs  lib.rs  memory.rs  redis.rs  store.rs
crates/cas/: Cargo.toml
crates/cas/src/: coordinator.rs  lib.rs  limits.rs
crates/cas/tests/: coordinator_contract.rs
crates/cli/: Cargo.toml
crates/cli/src/: adapter.rs  admin.rs  artifact.rs  backup.rs  bench.rs  command.rs  config.rs  db.rs  fsck.rs  gc.rs  gc_schedule.rs  hold.rs  lib.rs  local_output.rs  local_path.rs  main.rs  providerless.rs  rebuild.rs  repair.rs  storage_migration.rs
crates/cli/tests/: backup_e2e.rs  bench_e2e.rs  cli_artifacts_e2e.rs  db_migrate_e2e.rs  fsck_e2e.rs  gc_e2e.rs  gc_schedule_e2e.rs  hold_e2e.rs  index_rebuild_e2e.rs  k8s_manifest_security_e2e.rs  repair_e2e.rs  storage_migration_e2e.rs
crates/cli/tests/support/: mod.rs
crates/fuzz/: .gitignore  Cargo.toml
crates/fuzz/corpus/shardline_protocol_xorb/: seed.txt
crates/fuzz/fuzz_targets/shardline/: async_storage_races.rs  cli_parse.rs  lifecycle_repair.rs  local_filesystem_races.rs  protocol_bazel_http.rs  protocol_frontends.rs  protocol_hash.rs  protocol_lfs.rs  protocol_oci.rs  protocol_ranges.rs  protocol_token.rs  protocol_xorb.rs  reconstruction_plan.rs  shard_parse.rs  storage_key.rs  vcs_refs.rs
crates/index/: Cargo.toml
crates/index/migrations/: 20260417000000_metadata_store.down.sql  20260417000000_metadata_store.up.sql  20260417010000_retention_holds.down.sql  20260417010000_retention_holds.up.sql  20260418000000_dedupe_shards.down.sql  20260418000000_dedupe_shards.up.sql  20260418010000_webhook_deliveries.down.sql  20260418010000_webhook_deliveries.up.sql  20260418020000_provider_repository_states.down.sql  20260418020000_provider_repository_states.up.sql  20260418110000_provider_repository_reconciliation.down.sql  20260418110000_provider_repository_reconciliation.up.sql
crates/index/src/: dedupe.rs  ids.rs  lib.rs  lifecycle.rs  local.rs  local_fs.rs  local_sqlite.rs  memory.rs  postgres.rs  provider.rs  reconstruction.rs  record.rs  record_key.rs  store.rs  test_invariant_error.rs  xet_hash.rs
crates/protocol/: Cargo.toml
crates/protocol/benches/: protocol_core.rs
crates/protocol/src/: hash.rs  lib.rs  ranges.rs  security.rs  text.rs  time.rs  token.rs  xorb.rs
crates/server/: Cargo.toml
crates/server/benches/: local_backend.rs  oci_finalize_fixed.rs  oci_tags.rs  oci_tags_fixed.rs
crates/server/src/: app.rs  auth.rs  backend.rs  backup.rs  bazel_http_adapter.rs  chunk_store.rs  clock.rs  config.rs  database_migration.rs  download_stream.rs  error.rs  fsck.rs  fuzz.rs  gc.rs  ingest_bench.rs  lfs_adapter.rs  lib.rs  lifecycle_repair.rs  local_backend.rs  local_fs.rs  local_path.rs  model.rs  object_store.rs  oci_adapter.rs  ops_record_store.rs  overflow.rs  postgres_backend.rs  protocol_support.rs  provider.rs  provider_events.rs  rebuild.rs  reconstruction.rs  reconstruction_cache.rs  record_store.rs  repository_scope_path.rs  runtime_check.rs  server_role.rs  shard_store.rs  storage_migration.rs  test_fixtures.rs  (+6 more)
crates/server/src/app/: operational.rs  protocol_routes.rs  provider.rs  provider_routes.rs  reconstruction_helpers.rs  reconstruction_routes.rs  tests.rs
crates/server/src/app/tests/: protocol_frontends_http.rs  transfer_http.rs
crates/server/src/app/tests/provider_http/: generic.rs  gitea.rs  github.rs  gitlab.rs  mod.rs  shared.rs
crates/server/src/config/: env.rs  secrets.rs  tests.rs
crates/server/src/fsck/: lifecycle_checks.rs  record_checks.rs  tests.rs
crates/server/src/gc/: quarantine.rs  reachability.rs  tests.rs
crates/server/src/lifecycle_repair/: tests.rs
crates/server/src/local_backend/: records.rs  tests.rs
crates/server/src/provider/: config_io.rs  tests.rs
crates/server/src/provider_events/: outcome.rs  records.rs  repository.rs  state.rs  tests.rs
crates/server/src/rebuild/: candidates.rs  tests.rs
crates/server/src/server_frontend/: dispatch.rs  kind.rs  mod.rs  tests.rs  xet.rs
crates/server/src/xet_adapter/: frontend.rs  ingest.rs  mod.rs  reconstruction.rs  shard_store.rs  xorb.rs  xorb_store.rs  xorb_visit.rs
crates/server/tests/: git_xet_push_e2e.rs  k8s_cluster_protocol_e2e.rs  live_provider_bridge_e2e.rs  native_protocol_frontends_e2e.rs  native_xet_client_e2e.rs  provider_token_flow.rs  role_split_e2e.rs
crates/server/tests/support/: mod.rs
crates/storage/: Cargo.toml
crates/storage/benches/: s3_put_file_fixed.rs
crates/storage/src/: anchored_fs.rs  key.rs  lib.rs  local.rs  local_fs.rs  local_path.rs  object.rs  s3.rs  store.rs
crates/test_support/: Cargo.toml
crates/test_support/src/: docker.rs  lib.rs
crates/vcs/: Cargo.toml
crates/vcs/src/: adapter.rs  authorization.rs  builtin.rs  generic.rs  gitea.rs  github.rs  gitlab.rs  lib.rs  provider.rs  reference.rs  token_issuer.rs
docs/: ARCHITECTURE.md  BACKUP.md  CACHE_ADAPTERS.md  CLI.md  CLIENT_CONFIGURATION.md  COMPATIBILITY_STATUS.md  DATABASE_MIGRATIONS.md  DEPLOYMENT.md  FSCK.md  GARBAGE_COLLECTION.md  INDEX_REBUILD.md  LIFECYCLE_REPAIR.md  OPERATIONS.md  PERFORMANCE.md  PRODUCTION_SECURITY_AUDIT.md  PROFILING.md  PROTOCOLS.md  PROTOCOL_CONFORMANCE.md  PROVIDER_ADAPTERS.md  PROVIDER_QUICKSTART.md  README.md  REPOSITORY_BOOTSTRAP.md  SECURITY_AND_INVARIANTS.md  STORAGE_ADAPTERS.md  STORAGE_MIGRATION.md  SYSTEMD.md
migrations/: 20260417000000_metadata_store.down.sql  20260417000000_metadata_store.up.sql  20260417010000_retention_holds.up.sql  20260418000000_dedupe_shards.up.sql  20260418010000_webhook_deliveries.down.sql  20260418010000_webhook_deliveries.up.sql  20260418020000_provider_repository_states.down.sql  20260418020000_provider_repository_states.up.sql  (+2 more)
scripts/: build-release-archive.sh  (+2 more)
(+51 files in other folders)
