[package]
name = "shardline-cache"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-cache"
readme = "../../README.md"
description = "Reconstruction-cache contracts and adapters for Shardline."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex = "0.4"
redis = { version = "1.0.2", features = ["tokio-comp"] }
shardline-protocol = { version = "0.1.0", path = "../protocol" }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
