[package]
name = "shardline-cas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-cas"
readme = "../../README.md"
description = "CAS coordinator composition for Shardline."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
shardline-index = { version = "0.1.0", path = "../index" }
shardline-storage = { version = "0.1.0", path = "../storage" }

[dev-dependencies]
blake3 = "1.8.3"
shardline-protocol = { version = "0.1.0", path = "../protocol" }
tempfile = "3.15"
thiserror = { version = "2.0.18", default-features = false }

[lints]
workspace = true
