[package]
name = "shardline-cas"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-cas"
readme = "../../README.md"
description = "CAS coordinator composition for Shardline."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
shardline-index.workspace = true
shardline-storage.workspace = true

[dev-dependencies]
blake3.workspace = true
shardline-protocol.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
