[package]
name = "shardline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline"
readme = "../../README.md"
description = "Operator CLI and self-hosted server entrypoint for Shardline."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "shardline"
path = "src/lib.rs"

[[bin]]
name = "shardline"
path = "src/main.rs"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.59"
clap_mangen = "0.2.31"
hex = "0.4"
libc = "0.2.177"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shardline-index = { version = "0.1.0", path = "../index" }
shardline-protocol = { version = "0.1.0", path = "../protocol" }
shardline-server = { version = "0.1.0", path = "../server" }
shardline-storage = { version = "0.1.0", path = "../storage" }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
shardline-test-support = { version = "0.1.0", path = "../test_support" }
tempfile = "3.15"
url = "2.5"

[lints]
workspace = true
