[package]
name = "shardline"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline"
readme = "../../README.md"
description = "Self-hosted Shardline CAS server and operator CLI for Git/Xet storage workflows."
keywords = ["xet", "git", "cas", "storage", "deduplication"]
categories = [
    "command-line-utilities",
    "development-tools",
    "filesystem",
    "network-programming",
    "web-programming::http-server",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "shardline"
path = "src/lib.rs"

[[bin]]
name = "shardline"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
clap_mangen.workspace = true
hex.workspace = true
libc.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
shardline-index.workspace = true
shardline-protocol.workspace = true
shardline-server.workspace = true
shardline-storage.workspace = true
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
rusqlite = { workspace = true, features = ["bundled"] }
shardline-test-support.workspace = true
tempfile.workspace = true
url.workspace = true

[lints]
workspace = true
