[package]
name = "shardline-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-index"
readme = "../../README.md"
description = "Reconstruction and deduplication index contracts and adapters for Shardline."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-util = "0.3"
hex = "0.4"
libc = "0.2.177"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shardline-protocol = { version = "0.1.0", path = "../protocol" }
shardline-storage = { version = "0.1.0", path = "../storage" }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
] }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
tempfile = "3.15"
tokio = { version = "1.48.0", features = ["macros", "rt"] }

[lints]
workspace = true
