[package]
name = "shardline-protocol"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-protocol"
readme = "../../README.md"
description = "Protocol-facing hashes, ranges, secrets, and token types for Shardline."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex.workspace = true
hmac.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
xet-core-structures.workspace = true
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true, features = ["cargo_bench_support"] }

[lints]
workspace = true

[[bench]]
name = "protocol_core"
harness = false
