[package]
name = "shardline-server"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-server"
readme = "../../README.md"
description = "HTTP server boundary, runtime, and operator workflows for Shardline."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
axum.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
futures-util.workspace = true
hex.workspace = true
libc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shardline-cache.workspace = true
shardline-cas.workspace = true
shardline-index.workspace = true
shardline-protocol.workspace = true
shardline-storage.workspace = true
shardline-vcs.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url.workspace = true
xet-core-structures.workspace = true
zeroize.workspace = true

[dev-dependencies]
async-trait.workspace = true
criterion = { workspace = true, features = ["async_tokio", "cargo_bench_support"] }
hmac.workspace = true
redis = { workspace = true, features = ["tokio-comp"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rusqlite = { workspace = true, features = ["bundled"] }
shardline-test-support.workspace = true
tempfile.workspace = true
xet-client.workspace = true
xet-data.workspace = true
xet-runtime.workspace = true

[lints]
workspace = true

[[bench]]
name = "local_backend"
harness = false
