[package]
name = "shardline-storage"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-storage"
readme = "../../README.md"
description = "Content-addressed object storage contracts and adapters for Shardline."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
blake3.workspace = true
bytes.workspace = true
futures-util.workspace = true
libc.workspace = true
object_store = { workspace = true, features = ["aws"] }
shardline-protocol.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
hex.workspace = true
sha2.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[bench]]
name = "s3_put_file_fixed"
harness = false
