[package]
name = "shardline-test-support"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-test-support"
readme = "../../README.md"
description = "Test support utilities for Shardline crates."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
