[package]
name = "shardline-vcs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-vcs"
readme = "../../README.md"
description = "Provider adapters and authorization boundaries for Git-backed Shardline deployments."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex = "0.4"
hmac = "0.12"
serde_json = "1.0"
sha2 = "0.10"
shardline-protocol = { version = "0.1.0", path = "../protocol" }
subtle = { version = "2.6", default-features = false }
thiserror = { version = "2.0.18", default-features = false }

[lints]
workspace = true
