[package]
name = "shardline-vcs"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shardline-vcs"
readme = "../../README.md"
description = "Provider adapters and authorization boundaries for Git-backed Shardline deployments."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex.workspace = true
hmac.workspace = true
serde_json.workspace = true
sha2.workspace = true
shardline-protocol.workspace = true
subtle.workspace = true
thiserror.workspace = true

[lints]
workspace = true
